--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1><%= @list.name %></h1>
+  <%= cl_image_tag @list.picture.key, height: 300, width: 400, crop: :fill %>
 
   <%= link_to "Back lists", lists_path, class: "btn btn-primary" %>
 </div>
