--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,4 +4,6 @@
     <%= f.input :picture, as: :file %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
+
+  <%= link_to "Bacl lists", lists_path, class: "btn btn-primary mt-3" %>
 </div>
