--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
-  <h1><%= @list.name %></h1>
-  <%= cl_image_tag @list.picture.key, height: 300, width: 400, crop: :fill %>
+  <h1><%= @list.name %> movies</h1>
 
-  <%= link_to "Back lists", lists_path, class: "btn btn-primary" %>
+  <ul class="list-group py-3">
+    <% @list.movies.each do |movie| %>
+      <li class="list-group-item d-flex justify-content-between">
+        <%= movie.title %>
+        <%= link_to "Delete", bookmark_path(Bookmark.where(movie: movie, list: @list)[0]), status: :see_other, data: { turbo_method: :delete, turbo_message: "Are you sure?" } %>
+      </li>
+    <% end %>
+  </ul>
+
+  <%= link_to "Back Lists", lists_path, class: "btn btn-primary" %>
+  <%= link_to "New Bookmark", new_list_bookmark_path(@list), class: "btn btn-primary" %>
 </div>
