--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,7 @@
+<div class="banner">
+  <%= cl_image_tag(@list.picture.key, height: 300, crop: :fill) %>
+</div>
+
 <div class="container">
   <h1><%= @list.name %> movies</h1>
 
