--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,11 @@
 .banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 300px;
-}
-
-.banner img {
-  width: 100%;
-  object-fit: cover;
+  background-image: url("lists.png");
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
 }
