--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,13 +1,23 @@
-<div class="container">
-  <h1>All the lists</h1>
+<div class="banner">
+  Watch List
+</div>
 
-  <ul class="list-group py-3">
-    <% @lists.each do |list| %>
-      <li class="list-group-item">
-        <%= link_to list.name, list_path(list) %>
-      </li>
-    <% end %>
-  </ul>
-
-  <%= link_to "New List", new_list_path, class: "btn btn-primary" %>
+<div class="container py-5">
+  <div class="row">
+    <%# 左侧列表区域 %>
+    <div class="col-10">
+      <h3>My Lists</h3>
+      <div class="row">
+        <% @lists.each do |list| %>
+          <div class="col-5 card" style="background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url('<%= cl_image_path list.picture.key, crop: :fill %>')">
+            <%= list.name %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <%# 右侧操作按钮区域 %>
+    <div class="col-2 text-end">
+      <%= link_to "New List", new_list_path, class: "btn btn-success" %>
+    </div>
+  </div>
 </div>
