added css for list show page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,9 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 300px;
-  background-image: url("lists.png");
+  background-size: 100% 100%;
   color: #fff;
   font-size: 32px;
   font-weight: bold;
