--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner lists">
   Watch List
 </div>
 
@@ -10,7 +10,7 @@
       <div class="row">
         <% @lists.each do |list| %>
           <div class="col-5 card" style="background-image: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url('<%= cl_image_path list.picture.key, crop: :fill %>')">
-            <%= list.name %>
+            <%= link_to list.name, list_path(list.id) %>
           </div>
         <% end %>
       </div>
