--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<<div class="container">
   <%= simple_form_for @list do |f| %>
     <%= f.input :name %>
     <%= f.input :picture, as: :file %>
